--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -1,80 +1,78 @@
-<view class='container'>
-  <view class='me'>
-    <view class='avatar-bg'>
-      <image class='me-background' src='/public/images/me_background.png' mode="scaleToFit"></image>
-      <view bindtap='bindUserDetailsTap' class='avatar-wrapper'>
-        <view>
-          <image class='avatar' src='{{userInfo.avatarUrl || "/public/images/qiangba_logo.png"}}'></image>
-          <image class='avatar-background' src='/public/images/avatar_background.png'></image>
-          <image class='empty-box' src='/public/images/empty_box.png'></image>
-          <p class="empty-box-text">www.cnqiangba.com</p>
-        </view>
-        <p class="text" wx:if="{{!hasUserInfo}}"> 点击登陆 </p>
-        <p class="text" wx:else>{{userInfo.nickName}} </p>
+<view class='container me'>
+  <view class='avatar-bg'>
+    <image class='me-background' src='/public/images/me_background.png' mode="scaleToFit"></image>
+    <view bindtap='bindUserDetailsTap' class='avatar-wrapper'>
+      <view>
+        <image class='avatar' src='{{userInfo.avatarUrl || "/public/images/qiangba_logo.png"}}'></image>
+        <image class='avatar-background' src='/public/images/avatar_background.png'></image>
+        <image class='empty-box' src='/public/images/empty_box.png'></image>
+        <p class="empty-box-text">www.cnqiangba.com</p>
       </view>
-    </view>
-    <view class="menu">
-      <image class='v-line' src='/public/images/v_line.png'></image>
-      <image class='h-line-1' src='/public/images/h_line.png'></image>
-      <image class='h-line-2' src='/public/images/h_line.png'></image>
-      <view class='menu-icons'>
-        <i-row i-class='icon-row'>
-          <i-col span="12" i-class="icon-col">
-            <navigator url="/pages/order-history/order-history" hover-class='btn-hover'>
-              <image src="/public/images/我的订单.png" mode="scaleToFit"></image>
-            </navigator>
-          </i-col>
-          <i-col span="12" i-class="icon-col">
-            <navigator url="/pages/coupon/coupon" hover-class='btn-hover'>
-              <image src="/public/images/优惠券.png" mode="scaleToFit"></image>
-            </navigator>
-          </i-col>
-        </i-row>
-        <i-row i-class='icon-row'>
-          <i-col span="12" i-class="icon-col">
-            <navigator url="/pages/address/address" hover-class='btn-hover'>
-              <image src="/public/images/收货地址.png" mode="scaleToFit"></image>
-            </navigator>
-          </i-col>
-          <i-col span="12" i-class="icon-col">
-            <navigator url="/pages/contact/contact" hover-class='btn-hover'>
-              <image src="/public/images/联系客服.png" mode="scaleToFit"></image>
-            </navigator>
-          </i-col>
-        </i-row>
-        <i-row i-class='icon-row'>
-          <i-col span="12" i-class="icon-col">
-            <navigator url="/pages/help-center/help-center" hover-class='btn-hover'>
-              <image src="/public/images/帮助中心.png" mode="scaleToFit"></image>
-            </navigator>
-          </i-col>
-          <i-col span="12" i-class="icon-col">
-            <button bindtap="showModal" class="share-firend-btn" hover-class='btn-hover'>
-              <image src="/public/images/分享好友.png" mode="scaleToFit"></image>
-            </button>
-          </i-col>
-        </i-row>
-      </view>
+      <p class="text" wx:if="{{!hasUserInfo}}"> 点击登陆 </p>
+      <p class="text" wx:else>{{userInfo.nickName}} </p>
     </view>
   </view>
+  <view class="menu">
+    <image class='v-line' src='/public/images/v_line.png'></image>
+    <image class='h-line-1' src='/public/images/h_line.png'></image>
+    <image class='h-line-2' src='/public/images/h_line.png'></image>
+    <view class='menu-icons'>
+      <i-row i-class='icon-row'>
+        <i-col span="12" i-class="icon-col">
+          <navigator url="/pages/order-history/order-history" hover-class='btn-hover'>
+            <image src="/public/images/我的订单.png" mode="scaleToFit"></image>
+          </navigator>
+        </i-col>
+        <i-col span="12" i-class="icon-col">
+          <navigator url="/pages/coupon/coupon" hover-class='btn-hover'>
+            <image src="/public/images/优惠券.png" mode="scaleToFit"></image>
+          </navigator>
+        </i-col>
+      </i-row>
+      <i-row i-class='icon-row'>
+        <i-col span="12" i-class="icon-col">
+          <navigator url="/pages/address/address" hover-class='btn-hover'>
+            <image src="/public/images/收货地址.png" mode="scaleToFit"></image>
+          </navigator>
+        </i-col>
+        <i-col span="12" i-class="icon-col">
+          <navigator url="/pages/contact/contact" hover-class='btn-hover'>
+            <image src="/public/images/联系客服.png" mode="scaleToFit"></image>
+          </navigator>
+        </i-col>
+      </i-row>
+      <i-row i-class='icon-row'>
+        <i-col span="12" i-class="icon-col">
+          <navigator url="/pages/help-center/help-center" hover-class='btn-hover'>
+            <image src="/public/images/帮助中心.png" mode="scaleToFit"></image>
+          </navigator>
+        </i-col>
+        <i-col span="12" i-class="icon-col">
+          <button bindtap="showModal" class="share-firend-btn" hover-class='btn-hover'>
+            <image src="/public/images/分享好友.png" mode="scaleToFit"></image>
+          </button>
+        </i-col>
+      </i-row>
+    </view>
+  </view>
+</view>
 
-  <view class="modals modals-bottom-dialog" hidden="{{hideModal}}">
-    <view class="modals-cancel" bindtap="hideModal"></view>
-    <view class="bottom-dialog-body bottom-pos" animation="{{animationData}}">
-      <view class='share-imgs'>
-        <i-row>
-          <i-col span="5" i-class="share-icon-col">
-            <button open-type='share' class="share-firend-icon">
-              <image src="/public/images/微信好友.png"></image>
-              <p class="label">微信好友</p>
-            </button>
-          </i-col>
-          <i-col span="5" i-class="share-icon-col hide">
-            <image src="/public/images/朋友圈.png" class='friends-circle'></image>
-            <p class="label">朋友圈</p>
-          </i-col>
-        </i-row>
-      </view>
+<view class="modals modals-bottom-dialog" hidden="{{hideModal}}">
+  <view class="modals-cancel" bindtap="hideModal"></view>
+  <view class="bottom-dialog-body bottom-pos" animation="{{animationData}}">
+    <view class='share-imgs'>
+      <i-row>
+        <i-col span="5" i-class="share-icon-col">
+          <button open-type='share' class="share-firend-icon">
+            <image src="/public/images/微信好友.png"></image>
+            <p class="label">微信好友</p>
+          </button>
+        </i-col>
+        <i-col span="5" i-class="share-icon-col hide">
+          <image src="/public/images/朋友圈.png" class='friends-circle'></image>
+          <p class="label">朋友圈</p>
+        </i-col>
+      </i-row>
     </view>
   </view>
 </view>
