--- a/pages/swiper-details/swiper-details.wxml
+++ b/pages/swiper-details/swiper-details.wxml
@@ -1,4 +1,4 @@
-<!--pages/swiper-details/swiper-details.wxml-->
+<nav-bar navbarData='{{navData}}'></nav-bar>
 <view class='container'>
   <import src="../../modules/wxParse/wxParse.wxml"/>
   <template is="wxParse" data="{{wxParseData:article.nodes}}"/>
